--- a/hw3/Assignment2_12131094.ipynb
+++ b/hw3/Assignment2_12131094.ipynb
@@ -115,8 +115,9 @@
     "</div>\n",
     "\n",
     "Assume the center of the circle plate is O, $^O\\nu_b = [0,0,1,0,0,0]^T$\n",
-    "$^b\\pmb{v_b} =\\pmb{w}\\times \\pmb{^bOb} = [0,0,1]^T\\times [10,0,0]^T $.\n",
-    " $$^b\\nu_b = [0,0,1,0,10,0]^T$$\n",
+    "$^b\\pmb{v_b} =\\pmb{v_o}+\\pmb{w}\\times \\pmb{^bOb} =[0,1,0]^T\\times [0,0,-20]^T+ [0,0,1]^T\\times [10,0,0]^T $.\n",
+    "\n",
+    " $$^b\\nu_b = [0,0,1,-20,10,0]^T$$\n",
     "\n",
     "(b) The initial transformation matrix of b in {s}, \n",
     "            $$M = \\left[\\begin{matrix}  1&0&0&10 \\\\  0&1&0&0 \\\\0&0&1&-20 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
@@ -144,7 +145,8 @@
     "The initial transformation matrix of b in {s}, \n",
     "            $$M = \\left[\\begin{matrix}  -1&0&0&0 \\\\  0&0&1&3 \\\\0&1&0&-2 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
     "$^s \\bar{s_1} = [0,1,0,0,0,0]^T$, $^s\\bar{s_2} = [1,0,0,0,-2,0]^T$, $^s\\bar{s_2} = [0,0,0,0,1,0]^T$\n",
-    "When the $\\theta = (90^{\\circ},90^{\\circ},1)$, use the func 'FKinSpace' to get the result of configuration.\n"
+    "When the $\\theta = (90^{\\circ},90^{\\circ},1)$, use the func 'FKinSpace' to get the result of configuration.\n",
+    "\n"
    ]
   },
   {
@@ -219,21 +221,19 @@
     "\n",
     "#### Solution:\n",
     "\n",
-    " \n",
-    "\n",
-    "\n"
+    "The code is shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2022-04-02 11:50:28.129] [console] [info] Meshcat listening for connections at http://localhost:7000\n"
+      "[2022-04-02 17:37:59.890] [console] [info] Meshcat listening for connections at http://localhost:7001\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,11 +266,11 @@
     "builder = DiagramBuilder()\n",
     "plant, scene_graph = AddMultibodyPlantSceneGraph(builder, 0.0)\n",
     "\n",
-    "# parameters\n",
+    "# parameters given by self\n",
     "L0 = 0.8     #lenght of link 0\n",
     "L1 = 1\n",
     "L2 = 0.5\n",
-    "L3 = 0.08    # end effector\n",
+    "L3 = 0.5    # end effector\n",
     "\n",
     "RGBA_Color0 = [0.5, 0.5, 0.5, 0.4]\n",
     "RGBA_Color1 = [0, 0.5, 0.5, 0.4]\n",
@@ -313,8 +313,8 @@
     "    RGBA_Color2)\n",
     "plant.RegisterVisualGeometry(\n",
     "    link_3,\n",
-    "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, 0]),\n",
-    "    Box(L3, L3, L3),\n",
+    "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, L3/2]),\n",
+    "    Box(c, c, L3),\n",
     "    \"link_3\",\n",
     "    RGBA_Color0)\n",
     "\n",
@@ -329,7 +329,7 @@
     "\n",
     "Joint2_Frame = plant.AddFrame(FixedOffsetFrame(\n",
     "    link_1,\n",
-    "    RigidTransform(RollPitchYaw(0, np.pi/2, -np.pi/2), [L1, 0, 0])))\n",
+    "    RigidTransform(RollPitchYaw(0, np.pi/2, -np.pi/2), [L1, 0, 0])))    #rotate about fixed frame\n",
     "\n",
     "Joint3_Frame = plant.AddFrame(FixedOffsetFrame(\n",
     "    link_2,\n",
@@ -337,16 +337,18 @@
     "\n",
     "Joint1 = plant.AddJoint(RevoluteJoint(\n",
     "    name=\"Joint1\", frame_on_parent=Joint1_Frame,\n",
-    "    frame_on_child=link_1.body_frame(), axis=[0, 0, 1],\n",
+    "    frame_on_child=link_1.body_frame(), axis=[0, 0, 1],    #axis is the ratation axis\n",
     "    pos_lower_limit=-3.14,\n",
     "    pos_upper_limit=3.14,\n",
     "    damping=0.0))\n",
+    "\n",
     "Joint2 = plant.AddJoint(RevoluteJoint(\n",
     "    name=\"Joint2\", frame_on_parent=Joint2_Frame,\n",
     "    frame_on_child=link_2.body_frame(), axis=[0, 0, 1],\n",
     "    pos_lower_limit=-3.14,\n",
     "    pos_upper_limit=3.14,\n",
     "    damping=0.0))\n",
+    "\n",
     "Joint3 = plant.AddJoint(RevoluteJoint(\n",
     "    name=\"Joint3\", frame_on_parent=Joint3_Frame,\n",
     "    frame_on_child=link_3.body_frame(), axis=[0, 0, 1],\n",
@@ -363,7 +365,7 @@
     "# add frames of interest\n",
     "G = plant.AddFrame(FixedOffsetFrame('EndEffector',\n",
     "    link_3,\n",
-    "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, 0])))\n",
+    "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, L3])))\n",
     "\n",
     "\n",
     "# Draw RGB frames for visualization\n",
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,6 +391,91 @@
     "diagram = builder.Build()\n",
     "diagram_context = diagram.CreateDefaultContext()\n",
     "diagram.Publish(diagram_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The pose of frame{3} of the first set of joint positions is :\n",
+      " [[ 3.74939946e-33  0.00000000e+00  1.00000000e+00  1.00000000e+00]\n",
+      " [-6.12323400e-17  1.00000000e+00  0.00000000e+00 -3.06161700e-17]\n",
+      " [-1.00000000e+00 -6.12323400e-17  3.74939946e-33  3.00000000e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "----------------------------\n",
+      "The pose of frame{3} of the second set of joint positions is :\n",
+      " [[ 5.72061403e-01 -5.87785252e-01  5.72061403e-01  1.09504770e+00]\n",
+      " [ 4.15626938e-01  8.09016994e-01  4.15626938e-01  7.95598721e-01]\n",
+      " [-7.07106781e-01 -1.79345371e-17  7.07106781e-01  4.46446609e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "----------------------------\n",
+      "The pose of frame{3} of the third set of joint positions is :\n",
+      " [[ 3.53553391e-01 -7.07106781e-01  6.12372436e-01  8.83883476e-01]\n",
+      " [ 3.53553391e-01  7.07106781e-01  6.12372436e-01  8.83883476e-01]\n",
+      " [-8.66025404e-01 -3.06161700e-17  5.00000000e-01  3.66987298e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (1) get 3 set of different joint positions\n",
+    "\n",
+    "# Get world frame\n",
+    "theta1=0\n",
+    "theta2=0\n",
+    "theta3 = 0\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "diagram.Publish(diagram_context)\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "diagram.Publish(diagram_context)\n",
+    "\n",
+    "\n",
+    "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
+    "X_W3=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "print('The pose of frame{3} of the first set of joint positions is :\\n',X_W3.GetAsMatrix4())\n",
+    "print('----------------------------')\n",
+    "\n",
+    "#the 2nd set of position\n",
+    "theta1=np.pi/5\n",
+    "theta2=np.pi/4\n",
+    "theta3 = np.pi/3\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "diagram.Publish(diagram_context)\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "diagram.Publish(diagram_context)\n",
+    "\n",
+    "\n",
+    "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
+    "X_W3=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "print('The pose of frame{3} of the second set of joint positions is :\\n',X_W3.GetAsMatrix4())\n",
+    "print('----------------------------')\n",
+    "\n",
+    "# the 3rd set of position\n",
+    "theta1=np.pi/4\n",
+    "theta2=np.pi/6\n",
+    "theta3 = np.pi/3\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "diagram.Publish(diagram_context)\n",
+    "\n",
+    "\n",
+    "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
+    "X_W3=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "print('The pose of frame{3} of the third set of joint positions is :\\n',X_W3.GetAsMatrix4())\n",
+    "print('----------------------------')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(1)\n",
+    "\n"
    ]
   },
   {
@@ -421,26 +508,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# M: The homogeneous transformation matrix at home position\n",
-    "theta1=0\n",
-    "theta2=0\n",
-    "theta3=np.pi/6\n",
-    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model_instance, [theta1, theta2, theta3]) # theta1, theta2\n",
-    "diagram.Publish(diagram_context)\n",
-    "\n",
-    "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "T0e = G.CalcPose(plant_context, Zero_Frame)\n",
-    "print(T0e.GetAsMatrix4())"
+    "Tbs = myPoE(theta1,theta2,theta3)\n",
+    "print(Tbs)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Tbs = myPoE(theta1,theta2,theta3)\n",
-    "print(Tbs)"
+    "(2):"
    ]
   },
   {
