--- a/hw3/Assignment2_12131094.ipynb
+++ b/hw3/Assignment2_12131094.ipynb
@@ -143,15 +143,15 @@
     "#### Solution:\n",
     "(a)\n",
     "The initial transformation matrix of b in {s}, \n",
-    "            $$M = \\left[\\begin{matrix}  -1&0&0&0 \\\\  0&0&1&3 \\\\0&1&0&-2 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
-    "$^s \\bar{s_1} = [0,1,0,0,0,0]^T$, $^s\\bar{s_2} = [1,0,0,0,-2,0]^T$, $^s\\bar{s_2} = [0,0,0,0,1,0]^T$\n",
+    "            $$M = \\left[\\begin{matrix}  -1&0&0&0 \\\\  0&0&1&3 \\\\0&1&0&2 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
+    "$^s \\bar{s_1} = [0,0,1,0,0,0]^T$, $^s\\bar{s_2} = [1,0,0,0,2,0]^T$, $^s\\bar{s_2} = [0,0,0,0,1,0]^T$\n",
     "When the $\\theta = (90^{\\circ},90^{\\circ},1)$, use the func 'FKinSpace' to get the result of configuration.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,17 +159,17 @@
      "output_type": "stream",
      "text": [
       "The end-effector configuration is:\n",
-      " [[-1.11022302e-16  1.11022302e-16  1.00000000e+00  2.00000000e+00]\n",
-      " [ 0.00000000e+00 -1.00000000e+00  1.11022302e-16  4.44089210e-16]\n",
-      " [ 1.00000000e+00  1.23259516e-32  1.11022302e-16  2.22044605e-16]\n",
+      " [[-1.11022302e-16  1.00000000e+00 -1.11022302e-16 -4.44089210e-16]\n",
+      " [-1.00000000e+00 -1.11022302e-16  1.23259516e-32  4.93038066e-32]\n",
+      " [ 0.00000000e+00  1.11022302e-16  1.00000000e+00  6.00000000e+00]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
       "The sapce jacobian for this configuration is:\n",
       " [[ 0.00000000e+00  1.11022302e-16  0.00000000e+00]\n",
+      " [ 0.00000000e+00  1.00000000e+00  0.00000000e+00]\n",
       " [ 1.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -1.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  1.00000000e+00]\n",
-      " [ 0.00000000e+00 -2.00000000e+00  1.11022302e-16]\n",
-      " [ 0.00000000e+00  0.00000000e+00  1.11022302e-16]]\n"
+      " [ 0.00000000e+00 -2.00000000e+00 -1.11022302e-16]\n",
+      " [ 0.00000000e+00  2.22044605e-16  1.23259516e-32]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
    ],
@@ -182,10 +182,10 @@
     "# show the forward kinematics configuration.\n",
     "M = np.array([[-1, 0,  0, 0],   \n",
     "              [ 0, 0,  1, 3],\n",
-    "              [ 0, 1, 0, -2],\n",
+    "              [ 0, 1, 0, 2],\n",
     "              [ 0, 0,  0, 1]])\n",
-    "Slist = np.array([[0, 1,  0,  0, 0,    0],\n",
-    "                          [1, 0,  0,  0, -2, 0],\n",
+    "Slist = np.array([[0, 0,  1,  0, 0,    0],\n",
+    "                          [1, 0,  0,  0, 2, 0],\n",
     "                          [0, 0, 0, 0, 1, 0]]).T\n",
     "thetalist = np.array([np.pi / 2.0, np.pi / 2.0, 1])\n",
     "T = mr.FKinSpace(M,Slist,thetalist)\n",
@@ -226,14 +226,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2022-04-02 17:37:59.890] [console] [info] Meshcat listening for connections at http://localhost:7001\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pydrake.math'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced control for robotics/hw3/Assignment2_12131094.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpydot\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m display, SVG, clear_output\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m RigidTransform, RollPitchYaw\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmultibody\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mplant\u001b[39;00m \u001b[39mimport\u001b[39;00m AddMultibodyPlantSceneGraph\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mall\u001b[39;00m \u001b[39mimport\u001b[39;00m (Parser, Meshcat, DiagramBuilder,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=9'>10</a>\u001b[0m                         MeshcatVisualizerCpp, JacobianWrtVariable,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=10'>11</a>\u001b[0m                         MakeRenderEngineVtk, RenderEngineVtkParams)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydrake.math'"
      ]
     }
    ],
@@ -579,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
