--- a/hw3/Assignment2_12131094.ipynb
+++ b/hw3/Assignment2_12131094.ipynb
@@ -145,13 +145,17 @@
     "The initial transformation matrix of b in {s}, \n",
     "            $$M = \\left[\\begin{matrix}  -1&0&0&0 \\\\  0&0&1&3 \\\\0&1&0&2 \\\\0&0&0&1 \\end{matrix}\\right]$$\n",
     "$^s \\bar{s_1} = [0,0,1,0,0,0]^T$, $^s\\bar{s_2} = [1,0,0,0,2,0]^T$, $^s\\bar{s_2} = [0,0,0,0,1,0]^T$\n",
-    "When the $\\theta = (90^{\\circ},90^{\\circ},1)$, use the func 'FKinSpace' to get the result of configuration.\n",
+    "<div align=center>\n",
+    "<img src=pro5.jpg width = 60% />\n",
+    "</div>\n",
+    "\n",
+    "When the $\\theta = (90^{\\circ},90^{\\circ},1)$, use the func 'FKinSpace' to get the result of configuration and use the 'JacobianSpace' to get the space jacobian $J_S$.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -226,18 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pydrake.math'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced control for robotics/hw3/Assignment2_12131094.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpydot\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m display, SVG, clear_output\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmath\u001b[39;00m \u001b[39mimport\u001b[39;00m RigidTransform, RollPitchYaw\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmultibody\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mplant\u001b[39;00m \u001b[39mimport\u001b[39;00m AddMultibodyPlantSceneGraph\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpydrake\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mall\u001b[39;00m \u001b[39mimport\u001b[39;00m (Parser, Meshcat, DiagramBuilder,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=9'>10</a>\u001b[0m                         MeshcatVisualizerCpp, JacobianWrtVariable,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tzxtoiny/Library/CloudStorage/OneDrive-redefineend-to-endsupply-chains/5-1-2/Advanced%20control%20for%20robotics/hw3/Assignment2_12131094.ipynb#ch0000010?line=10'>11</a>\u001b[0m                         MakeRenderEngineVtk, RenderEngineVtkParams)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydrake.math'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2022-04-02 23:37:56.073] [console] [info] Meshcat listening for connections at http://localhost:7000\n"
      ]
     }
    ],
@@ -257,12 +257,13 @@
     "from pydrake.multibody.tree import (PrismaticJoint, UnitInertia, SpatialInertia, RevoluteJoint, FixedOffsetFrame, WeldJoint)\n",
     "from manipulation.meshcat_cpp_utils import MeshcatJointSliders\n",
     "from manipulation.scenarios import AddMultibodyTriad\n",
-    "meshcat = Meshcat()"
+    "import modern_robotics as mr\n",
+    "meshcat = Meshcat()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
     "    \"link_3\",\n",
     "    RGBA_Color0)\n",
     "\n",
-    "Zero_Frame = plant.AddFrame(FixedOffsetFrame('WorldFrame',\n",
+    "Zero_Frame = plant.AddFrame(FixedOffsetFrame('ZeroFrame',\n",
     "    link_0,\n",
     "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, L0])))\n",
     "\n",
@@ -333,7 +334,7 @@
     "\n",
     "Joint2_Frame = plant.AddFrame(FixedOffsetFrame(\n",
     "    link_1,\n",
-    "    RigidTransform(RollPitchYaw(0, np.pi/2, -np.pi/2), [L1, 0, 0])))    #rotate about fixed frame\n",
+    "    RigidTransform(RollPitchYaw(0, np.pi/2, -np.pi/2), [L1, 0, 0])))\n",
     "\n",
     "Joint3_Frame = plant.AddFrame(FixedOffsetFrame(\n",
     "    link_2,\n",
@@ -369,12 +370,12 @@
     "# add frames of interest\n",
     "G = plant.AddFrame(FixedOffsetFrame('EndEffector',\n",
     "    link_3,\n",
-    "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, L3])))\n",
+    "    RigidTransform(RollPitchYaw(0, 0, 0), [0, 0, 0])))\n",
     "\n",
     "\n",
     "# Draw RGB frames for visualization\n",
     "# only one frame for each link\n",
-    "for body_name in [\"WorldFrame\", \"link_1\", \"link_2\", \"EndEffector\"]:\n",
+    "for body_name in [\"ZeroFrame\", \"link_1\", \"link_2\", \"EndEffector\"]:\n",
     "    AddMultibodyTriad(plant.GetFrameByName(body_name), scene_graph, 0.20, 0.008)\n",
     "    \n",
     "    \n"
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,17 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The pose of frame{3} of the first set of joint positions is :\n",
+      "The initial pose M is :\n",
       " [[ 3.74939946e-33  0.00000000e+00  1.00000000e+00  1.00000000e+00]\n",
       " [-6.12323400e-17  1.00000000e+00  0.00000000e+00 -3.06161700e-17]\n",
-      " [-1.00000000e+00 -6.12323400e-17  3.74939946e-33  3.00000000e-01]\n",
+      " [-1.00000000e+00 -6.12323400e-17  3.74939946e-33 -5.00000000e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "----------------------------\n",
+      "The pose of frame{3} of the first set of joint positions is :\n",
+      " [[ 5.00000000e-01 -7.07106781e-01  5.00000000e-01  9.57106781e-01]\n",
+      " [ 5.00000000e-01  7.07106781e-01  5.00000000e-01  9.57106781e-01]\n",
+      " [-7.07106781e-01 -1.79345371e-17  7.07106781e-01  4.46446609e-01]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
       "----------------------------\n",
       "The pose of frame{3} of the second set of joint positions is :\n",
@@ -429,35 +436,45 @@
    ],
    "source": [
     "# (1) get 3 set of different joint positions\n",
-    "\n",
     "# Get world frame\n",
     "theta1=0\n",
     "theta2=0\n",
-    "theta3 = 0\n",
-    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "theta3=0\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2, theta3]) # theta1, theta2\n",
     "diagram.Publish(diagram_context)\n",
-    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "\n",
+    "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
+    "M = G.CalcPose(plant_context, Zero_Frame)\n",
+    "print('The initial pose M is :\\n',M.GetAsMatrix4())\n",
+    "print('----------------------------')\n",
+    "\n",
+    "\n",
+    "# Get world frame\n",
+    "theta1=np.pi/4\n",
+    "theta2=np.pi/4\n",
+    "theta3 = np.pi/4\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2, theta3]) # theta1, theta2\n",
     "diagram.Publish(diagram_context)\n",
+    "\n",
     "\n",
     "\n",
     "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "X_W3=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
-    "print('The pose of frame{3} of the first set of joint positions is :\\n',X_W3.GetAsMatrix4())\n",
+    "X_W31=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "print('The pose of frame{3} of the first set of joint positions is :\\n',X_W31.GetAsMatrix4())\n",
     "print('----------------------------')\n",
     "\n",
     "#the 2nd set of position\n",
     "theta1=np.pi/5\n",
     "theta2=np.pi/4\n",
     "theta3 = np.pi/3\n",
-    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
+    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2, theta3]) # theta1, theta2\n",
     "diagram.Publish(diagram_context)\n",
-    "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model, [theta1, theta2,theta3]) # theta1, theta2\n",
-    "diagram.Publish(diagram_context)\n",
+    "\n",
     "\n",
     "\n",
     "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "X_W3=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
-    "print('The pose of frame{3} of the second set of joint positions is :\\n',X_W3.GetAsMatrix4())\n",
+    "X_W32=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "print('The pose of frame{3} of the second set of joint positions is :\\n',X_W32.GetAsMatrix4())\n",
     "print('----------------------------')\n",
     "\n",
     "# the 3rd set of position\n",
@@ -469,9 +486,12 @@
     "\n",
     "\n",
     "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "X_W3=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
-    "print('The pose of frame{3} of the third set of joint positions is :\\n',X_W3.GetAsMatrix4())\n",
-    "print('----------------------------')\n"
+    "X_W33=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "print('The pose of frame{3} of the third set of joint positions is :\\n',X_W33.GetAsMatrix4())\n",
+    "print('----------------------------')\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -484,36 +504,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.   0.   1.   1. ]\n",
+      " [ 0.   1.   0.   0. ]\n",
+      " [-1.   0.   0.  -0.5]\n",
+      " [ 0.   0.   0.   1. ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write down the screw axis\n",
-    "import modern_robotics as mr\n",
-    "\n",
     "# step 0: compute M \n",
     "M = mr.RpToTrans(np.array([[0, 0, 1], [0, 1, 0], [-1, 0, 0]]), np.array([L1, 0, -L2]))\n",
+    "print(M)\n",
     "# step 1: compute all the screw axis\n",
     "\n",
-    "Sbar_3_0=mr.ScrewToAxis(np.array([0,0,-L2]),np.array([1,0,0]),0)\n",
+    "Sbar_3_0=mr.ScrewToAxis(np.array([0,0,-L2]),np.array([1,0,0]),0)    #  (q,s,h)\n",
     "Sbar_2_0=mr.ScrewToAxis(np.array([L1,0,0]),np.array([0,-1,0]),0)\n",
     "Sbar_1_0=mr.ScrewToAxis(np.array([0,0,0]),np.array([0,0,1]),0)\n",
     "\n",
-    "def myPoE(theta1,theta2,theta3):\n",
-    "    SbarMatrix_3_0=mr.VecTose3(Sbar_3_0)\n",
+    "def myPoE(M, theta1,theta2,theta3):\n",
+    "    SbarMatrix_3_0=mr.VecTose3(Sbar_3_0)     \n",
     "    SbarMatrix_2_0=mr.VecTose3(Sbar_2_0)\n",
     "    SbarMatrix_1_0=mr.VecTose3(Sbar_1_0)\n",
-    "    return mr.MatrixExp6(SbarMatrix_1_0*theta1)@mr.MatrixExp6(SbarMatrix_2_0*theta2)@mr.MatrixExp6(SbarMatrix_3_0*theta3)@M\n"
+    "    return mr.MatrixExp6(SbarMatrix_1_0*theta1)@mr.MatrixExp6(SbarMatrix_2_0*theta2)@mr.MatrixExp6(SbarMatrix_3_0*theta3)@M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.14644661 -0.85355339  0.5         0.95710678]\n",
+      " [ 0.85355339  0.14644661  0.5         0.95710678]\n",
+      " [-0.5         0.5         0.70710678 -0.35355339]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "[[-0.22300626 -0.78931233  0.5720614   1.0950477 ]\n",
+      " [ 0.90844274  0.04456501  0.41562694  0.79559872]\n",
+      " [-0.35355339  0.61237244  0.70710678 -0.35355339]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
+      "[[-0.43559574 -0.65973961  0.61237244  0.88388348]\n",
+      " [ 0.78914913  0.04736717  0.61237244  0.88388348]\n",
+      " [-0.4330127   0.75        0.5        -0.4330127 ]\n",
+      " [ 0.          0.          0.          1.        ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "Tbs = myPoE(theta1,theta2,theta3)\n",
-    "print(Tbs)"
+    "Tbs1 = myPoE(M,np.pi/4,np.pi/4,np.pi/4)\n",
+    "print(Tbs1)\n",
+    "Tbs2 = myPoE(M,np.pi/5,np.pi/4,np.pi/3)\n",
+    "print(Tbs2)\n",
+    "Tbs3 = myPoE(M,np.pi/4,np.pi/6,np.pi/3)\n",
+    "print(Tbs3)\n"
    ]
   },
   {
@@ -525,42 +577,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "def myGeometrixJacobian(theta1,theta2,theta3):\n",
+    "    # compute the SE3 for each frame\n",
     "    SbarMatrix_2_0=mr.VecTose3(Sbar_2_0)\n",
     "    SbarMatrix_1_0=mr.VecTose3(Sbar_1_0)\n",
-    "    # compute the SE3 for each frame\n",
+    "    # T^hat\n",
     "    T_01 = mr.MatrixExp6(SbarMatrix_1_0*theta1)\n",
     "    T_12 = mr.MatrixExp6(SbarMatrix_2_0*theta2)\n",
     "    J1 = Sbar_1_0.reshape(6,1)\n",
-    "    J2 = np.matmul(mr.Adjoint(T_01), Sbar_2_0.reshape(6,1))\n",
-    "    J3 = np.matmul(mr.Adjoint(T_01@T_12), Sbar_3_0.reshape(6,1))\n",
+    "    J2 = mr.Adjoint(T_01) @ Sbar_2_0.reshape(6,1)\n",
+    "    J3 = mr.Adjoint(T_01@T_12) @ Sbar_3_0.reshape(6,1)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
     "    return  np.block([J1, J2, J3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J is:\n",
+      " [[ 0.          0.70710678  0.61237244]\n",
+      " [ 0.         -0.70710678  0.61237244]\n",
+      " [ 1.          0.          0.5       ]\n",
+      " [ 0.          0.          0.70710678]\n",
+      " [ 0.          0.         -0.70710678]\n",
+      " [ 0.         -1.          0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "J = myGeometrixJacobian(theta1,theta2,theta3)\n",
-    "print(J)"
+    "print('J is:\\n',J)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J_A is :\n",
+      " [[ 0.00000000e+00  7.07106781e-01  6.12372436e-01]\n",
+      " [ 0.00000000e+00 -7.07106781e-01  6.12372436e-01]\n",
+      " [ 1.00000000e+00  6.12323400e-17  5.00000000e-01]\n",
+      " [-8.83883476e-01 -4.73671727e-02  3.06186218e-01]\n",
+      " [-1.16116524e-01 -4.73671727e-02 -8.06186218e-01]\n",
+      " [ 0.00000000e+00 -4.57106781e-01  6.12372436e-01]]\n"
+     ]
+    }
+   ],
    "source": [
-    "J_G  = plant.CalcJacobianSpatialVelocity(plant_context, JacobianWrtVariable.kQDot, G, [0,0,0], Zero_Frame, Zero_Frame)\n",
-    "# JA_G = plant.CalcJacobianTranslationalVelocity(plant_context, JacobianWrtVariable.kQDot, G, [0,0,0], Zero_Frame, Zero_Frame)\n",
-    "print(J_G)\n",
-    "# print(JA_G)"
+    "# check whether the result agrees\n",
+    "J_G = plant.CalcJacobianSpatialVelocity(plant_context, JacobianWrtVariable.kQDot, G, [0,0,0], Zero_Frame, Zero_Frame)\n",
+    "braket_p = mr.VecToso3(T0e.translation())\n",
+    "E = np.block([[np.eye(3,3), 0*np.eye(3,3)],\n",
+    "            [-braket_p, np.eye(3,3)]])\n",
+    "J_A = np.linalg.inv(E)@J_G\n",
+    "print('J_A is :\\n',J_A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ja is :\n",
+      " [[ 0.          0.70710678  0.61237244]\n",
+      " [ 0.         -0.70710678  0.61237244]\n",
+      " [ 1.          0.          0.5       ]\n",
+      " [-3.60488426 -1.50894791  0.21145187]\n",
+      " [ 0.96592583 -1.50894791 -1.53093109]\n",
+      " [ 0.          2.23205081  1.6160254 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myAnalyticalJacobian(M_q, theta1, theta2, theta3):\n",
+    "    # comput q through fk\n",
+    "    Tbs = myPoE(M_q, theta1, theta2, theta3)\n",
+    "    braket_p = mr.VecToso3(Tbs[:,3])\n",
+    "    # construct E matrix s.t. J_a = E*J_g\n",
+    "    E = np.block([[np.eye(3,3), 0*np.eye(3,3)],\n",
+    "        [-braket_p, np.eye(3,3)]])\n",
+    "    # get geometry Jacobian\n",
+    "    J_g = myGeometrixJacobian(theta1, theta2, theta3)\n",
+    "    return E @ J_g\n",
+    "        \n",
+    "M_q = np.array([[0,0,-1,1+3],\n",
+    "[0,1,0,2],\n",
+    "[1,0,0,-0.5-1],\n",
+    "[0,0,0,1]])\n",
+    "\n",
+    "Ja = myAnalyticalJacobian(M_q, theta1, theta2, theta3)\n",
+    "print('Ja is :\\n',Ja)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The error is :\n",
+      " [[ 0.00000000e+00  0.00000000e+00 -1.11022302e-16]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.11022302e-16]\n",
+      " [ 0.00000000e+00  6.12323400e-17  0.00000000e+00]\n",
+      " [-4.44089210e-16  2.22044605e-16  0.00000000e+00]\n",
+      " [-2.22044605e-16  2.22044605e-16  2.22044605e-16]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if it is correct\n",
+    "Ja_fromDrake = plant.CalcJacobianSpatialVelocity(plant_context, JacobianWrtVariable.kQDot, G, [1,2,3], Zero_Frame, Zero_Frame)\n",
+    "print('The error is :\\n',Ja_fromDrake - Ja)"
    ]
   }
  ],
