--- a/hw3/Assignment3_12131094.ipynb
+++ b/hw3/Assignment3_12131094.ipynb
@@ -64,7 +64,7 @@
     "$\\hat{^sS_3} = [0,0,-1]^T$, $q =[0,6,0]$, $h = 0.1m/rad$\n",
     "$^s\\pmb{v} = h\\hat{S} + \\pmb{w} \\times (-^sq) = [-6,0,-0.1]^T$\n",
     "The screw axis of joint3 is $^s\\hat{S_3} = \\left[\\begin{matrix} 0 \\\\  0 \\\\-1 \\\\-6\\\\0\\\\-0.1 \\end{matrix}\\right]$.\n",
-    "Then use the func 'FKinSpace' to get the result of configuration."
+    "Then use the func 'FKinSpace' to get the result of configuration.\n"
    ]
   },
   {
@@ -230,14 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2022-04-02 23:37:56.073] [console] [info] Meshcat listening for connections at http://localhost:7000\n"
+      "[2022-04-03 00:03:32.512] [console] [info] Meshcat listening for connections at http://localhost:7002\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -414,22 +414,22 @@
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
       "----------------------------\n",
       "The pose of frame{3} of the first set of joint positions is :\n",
-      " [[ 5.00000000e-01 -7.07106781e-01  5.00000000e-01  9.57106781e-01]\n",
-      " [ 5.00000000e-01  7.07106781e-01  5.00000000e-01  9.57106781e-01]\n",
-      " [-7.07106781e-01 -1.79345371e-17  7.07106781e-01  4.46446609e-01]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      " [[-0.14644661 -0.85355339  0.5         0.95710678]\n",
+      " [ 0.85355339  0.14644661  0.5         0.95710678]\n",
+      " [-0.5         0.5         0.70710678 -0.35355339]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
       "----------------------------\n",
       "The pose of frame{3} of the second set of joint positions is :\n",
-      " [[ 5.72061403e-01 -5.87785252e-01  5.72061403e-01  1.09504770e+00]\n",
-      " [ 4.15626938e-01  8.09016994e-01  4.15626938e-01  7.95598721e-01]\n",
-      " [-7.07106781e-01 -1.79345371e-17  7.07106781e-01  4.46446609e-01]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      " [[-0.22300626 -0.78931233  0.5720614   1.0950477 ]\n",
+      " [ 0.90844274  0.04456501  0.41562694  0.79559872]\n",
+      " [-0.35355339  0.61237244  0.70710678 -0.35355339]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
       "----------------------------\n",
       "The pose of frame{3} of the third set of joint positions is :\n",
-      " [[ 3.53553391e-01 -7.07106781e-01  6.12372436e-01  8.83883476e-01]\n",
-      " [ 3.53553391e-01  7.07106781e-01  6.12372436e-01  8.83883476e-01]\n",
-      " [-8.66025404e-01 -3.06161700e-17  5.00000000e-01  3.66987298e-01]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      " [[-0.43559574 -0.65973961  0.61237244  0.88388348]\n",
+      " [ 0.78914913  0.04736717  0.61237244  0.88388348]\n",
+      " [-0.4330127   0.75        0.5        -0.4330127 ]\n",
+      " [ 0.          0.          0.          1.        ]]\n",
       "----------------------------\n"
      ]
     }
@@ -459,7 +459,7 @@
     "\n",
     "\n",
     "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "X_W31=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "X_W31=G.CalcPose(plant_context, Zero_Frame)\n",
     "print('The pose of frame{3} of the first set of joint positions is :\\n',X_W31.GetAsMatrix4())\n",
     "print('----------------------------')\n",
     "\n",
@@ -473,7 +473,7 @@
     "\n",
     "\n",
     "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "X_W32=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "X_W32=G.CalcPose(plant_context, Zero_Frame)\n",
     "print('The pose of frame{3} of the second set of joint positions is :\\n',X_W32.GetAsMatrix4())\n",
     "print('----------------------------')\n",
     "\n",
@@ -486,7 +486,7 @@
     "\n",
     "\n",
     "plant_context = plant.GetMyMutableContextFromRoot(diagram_context)\n",
-    "X_W33=Joint3_Frame.CalcPoseInWorld(plant_context)\n",
+    "X_W33=G.CalcPose(plant_context, Zero_Frame)\n",
     "print('The pose of frame{3} of the third set of joint positions is :\\n',X_W33.GetAsMatrix4())\n",
     "print('----------------------------')\n",
     "\n",
@@ -498,13 +498,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(1)\n",
-    "\n"
+    "(a) \n",
+    "THe snapshots of the Meshcat visualization at three different sets of joint positions.\n",
+    "<div align=center>\n",
+    "<img src=pro6-1-1.png width = 60% />\n",
+    "</div>\n",
+    "\n",
+    "<div align=center>\n",
+    "<img src=pro6-1-2.png width = 60% />\n",
+    "</div>\n",
+    "\n",
+    "<div align=center>\n",
+    "<img src=pro6-1-3.png width = 60% />\n",
+    "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -532,12 +543,12 @@
     "    SbarMatrix_3_0=mr.VecTose3(Sbar_3_0)     \n",
     "    SbarMatrix_2_0=mr.VecTose3(Sbar_2_0)\n",
     "    SbarMatrix_1_0=mr.VecTose3(Sbar_1_0)\n",
-    "    return mr.MatrixExp6(SbarMatrix_1_0*theta1)@mr.MatrixExp6(SbarMatrix_2_0*theta2)@mr.MatrixExp6(SbarMatrix_3_0*theta3)@M"
+    "    return mr.MatrixExp6(SbarMatrix_1_0*theta1)@ mr.MatrixExp6(SbarMatrix_2_0*theta2) @ mr.MatrixExp6(SbarMatrix_3_0*theta3) @ M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -572,31 +583,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(2):"
+    "(b)\n",
+    "Compare the calculation result of function 'myPoE' and the built-in function of the drake, the two results are the same as shown in the code output.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def myGeometrixJacobian(theta1,theta2,theta3):\n",
-    "    # compute the SE3 for each frame\n",
-    "    SbarMatrix_2_0=mr.VecTose3(Sbar_2_0)\n",
-    "    SbarMatrix_1_0=mr.VecTose3(Sbar_1_0)\n",
-    "    # T^hat\n",
-    "    T_01 = mr.MatrixExp6(SbarMatrix_1_0*theta1)\n",
-    "    T_12 = mr.MatrixExp6(SbarMatrix_2_0*theta2)\n",
-    "    J1 = Sbar_1_0.reshape(6,1)\n",
-    "    J2 = mr.Adjoint(T_01) @ Sbar_2_0.reshape(6,1)\n",
-    "    J3 = mr.Adjoint(T_01@T_12) @ Sbar_3_0.reshape(6,1)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
-    "    return  np.block([J1, J2, J3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -614,6 +607,19 @@
     }
    ],
    "source": [
+    "def myGeometrixJacobian(theta1,theta2,theta3):\n",
+    "    # compute the SE3 for each frame\n",
+    "    SbarMatrix_2_0=mr.VecTose3(Sbar_2_0)\n",
+    "    SbarMatrix_1_0=mr.VecTose3(Sbar_1_0)\n",
+    "    # T^hat\n",
+    "    T_01 = mr.MatrixExp6(SbarMatrix_1_0*theta1)\n",
+    "    T_12 = mr.MatrixExp6(SbarMatrix_2_0*theta2)\n",
+    "    J1 = Sbar_1_0.reshape(6,1)\n",
+    "    J2 = mr.Adjoint(T_01) @ Sbar_2_0.reshape(6,1)\n",
+    "    J3 = mr.Adjoint(T_01@T_12) @ Sbar_3_0.reshape(6,1)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          \n",
+    "    return  np.block([J1, J2, J3])\n",
+    "\n",
+    "\n",
     "J = myGeometrixJacobian(theta1,theta2,theta3)\n",
     "print('J is:\\n',J)"
    ]
@@ -645,6 +651,24 @@
     "            [-braket_p, np.eye(3,3)]])\n",
     "J_A = np.linalg.inv(E)@J_G\n",
     "print('J_A is :\\n',J_A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c)\n",
+    "Compare the calculation result of function 'myGeometrixJacobian' and the built-in function of the drake, the two results are the same as shown in the above code output.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(d) 1.\n",
+    "derive the analyitcal jacobian $J_a$\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -689,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -708,8 +732,8 @@
    ],
    "source": [
     "# check if it is correct\n",
-    "Ja_fromDrake = plant.CalcJacobianSpatialVelocity(plant_context, JacobianWrtVariable.kQDot, G, [1,2,3], Zero_Frame, Zero_Frame)\n",
-    "print('The error is :\\n',Ja_fromDrake - Ja)"
+    "Ja_Drake = plant.CalcJacobianSpatialVelocity(plant_context, JacobianWrtVariable.kQDot, G, [1,2,3], Zero_Frame, Zero_Frame)\n",
+    "print('The error is :\\n',Ja_Drake - Ja)"
    ]
   }
  ],
