--- a/hw3/RRR_multibody.ipynb
+++ b/hw3/RRR_multibody.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2022-04-02 22:30:19.399] [console] [info] Meshcat listening for connections at http://localhost:7000\n"
+      "[2022-04-02 23:47:15.571] [console] [info] Meshcat listening for connections at http://localhost:7001\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,15 +166,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.   0.   1.   1. ]\n",
+      " [ 0.   1.   0.   0. ]\n",
+      " [-1.   0.   0.  -0.5]\n",
+      " [ 0.   0.   0.   1. ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# write down the screw axis\n",
     "import modern_robotics as mr\n",
     "\n",
     "# step 0: compute M \n",
     "M = mr.RpToTrans(np.array([[0, 0, 1], [0, 1, 0], [-1, 0, 0]]), np.array([L1, 0, -L2]))\n",
+    "print(M)\n",
     "# step 1: compute all the screw axis\n",
     "\n",
     "Sbar_3_0=mr.ScrewToAxis(np.array([0,0,-L2]),np.array([1,0,0]),0)\n",
@@ -190,25 +202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-3.53553391e-01 -3.53553391e-01  8.66025404e-01  8.66025404e-01]\n",
-      " [ 6.12372436e-01  6.12372436e-01  5.00000000e-01  5.00000000e-01]\n",
-      " [-7.07106781e-01  7.07106781e-01  3.74939946e-33 -5.00000000e-01]\n",
+      "[[ 3.74939946e-33  0.00000000e+00  1.00000000e+00  1.00000000e+00]\n",
+      " [-6.12323400e-17  1.00000000e+00  0.00000000e+00 -3.06161700e-17]\n",
+      " [-1.00000000e+00 -6.12323400e-17  3.74939946e-33 -5.00000000e-01]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
    ],
    "source": [
     "# M: The homogeneous transformation matrix at home position\n",
-    "theta1=np.pi/6\n",
+    "theta1=0\n",
     "theta2=0\n",
-    "theta3=np.pi/4\n",
+    "theta3=0\n",
     "plant.SetPositions(plant.GetMyContextFromRoot(diagram_context), my_model_instance, [theta1, theta2, theta3]) # theta1, theta2\n",
     "diagram.Publish(diagram_context)\n",
     "\n",
@@ -219,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +306,7 @@
       " [ 1.00000000e+00  6.12323400e-17  3.74939946e-33]\n",
       " [ 0.00000000e+00  5.55111512e-17  2.50000000e-01]\n",
       " [ 0.00000000e+00 -5.55111512e-17 -4.33012702e-01]\n",
-      " [ 0.00000000e+00 -1.00000000e+00  0.00000000e+00]]\n"
+      " [ 0.00000000e+00 -1.00000000e+00  7.43708407e-18]]\n"
      ]
     }
    ],
@@ -310,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
